--- a/psychoactive-drugs-assignment/drugs.css
+++ b/psychoactive-drugs-assignment/drugs.css
@@ -14,6 +14,32 @@ header {
 
 footer {
     text-align: center;
+    font-family: 'OldUyghur';
+}
+
+nav {
+    background-color: #333;
+    overflow: hidden;
+}
+
+nav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: 'OldUyghur';
+    font-size: 15px;
+}
+
+nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+nav a.active {
+    background-color: #12ab78;
+    color: white;
 }
 
 .Stimulants{
