--- a/psychoactive-drugs-assignment/drugs.css
+++ b/psychoactive-drugs-assignment/drugs.css
@@ -87,13 +87,20 @@ hr {
     text-align: center;
 }
 
-.category-summary {
+.category-summary-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: stretch;
     align-content: center;
     text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.category-summary {
+    padding: 0px 50px 0px 50px;
+    width: 30;
 }
 
 .category-summary h4 {
